fixed image stretching

--- a/lesson07/css/lazyload.css
+++ b/lesson07/css/lazyload.css
@@ -14,6 +14,7 @@ picture {
 picture img {
     width: 300px;
     height: 400px;
+    object-fit: cover;
     background-color: gray;
 
     filter: blur(0em) grayscale(0);
